--- a/index.html
+++ b/index.html
@@ -7,11 +7,88 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
-    <title>Colors</title>
+    <title>Quiz</title>
+    <meta charset="utf-8">
+    <!-- makes content equal to device width being viewed on(responsive) -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-    <h1>Quiz</h1>
+    <div class="container">
+        <header>
+            <div class="pull-left">Quiz</div>
+            <div class="pull-right">Quiz</div>
+        </header>
+        <main>
+            <form class="questionForm" id="q1" data-question="1">
+                <h3>1. What does CSS stand for?</h3>
+                <ul>
+                    <li><input type="radio" name "q1" value="a" />Creative Style Sheets</li>
+                    <li><input type="radio" name "q1" value="b" />Colour style Sheets</li>
+                    <li><input type="radio" name "q1" value="c" />Cascading Style Sheets</li>
+                    <li><input type="radio" name "q1" value="d" />Computer Style Sheets</li>
+                </ul>
+                <button id="submit">Submit</button>
+
+            </form>
+            <form class="questionForm" id="q2" data-question="2">
+                <h3>2. What does CSS stand for?</h3>
+                <ul>
+                    <li><input type="radio" name "q2" value="a" />Creative Style Sheets</li>
+                    <li><input type="radio" name "q2" value="b" />Colour style Sheets</li>
+                    <li><input type="radio" name "q2" value="c" />Cascading Style Sheets</li>
+                    <li><input type="radio" name "q2" value="d" />Computer Style Sheets</li>
+                </ul>
+                <button id="submit">Submit</button>
+
+            </form>
+
+            <form class="questionForm" id="q3" data-question="3">
+                <h3>3. What does CSS stand for?</h3>
+                <ul>
+                    <li><input type="radio" name "q3" value="a" />Creative Style Sheets</li>
+                    <li><input type="radio" name "q3" value="b" />Colour style Sheets</li>
+                    <li><input type="radio" name "q3" value="c" />Cascading Style Sheets</li>
+                    <li><input type="radio" name "q3" value="d" />Computer Style Sheets</li>
+                </ul>
+                <button id="submit">Submit</button>
+
+            </form>
+            <form class="questionForm" id="q4" data-question="4">
+                <h3>4. What does CSS stand for?</h3>
+                <ul>
+                    <li><input type="radio" name "q4" value="a" />Creative Style Sheets</li>
+                    <li><input type="radio" name "q4" value="b" />Colour style Sheets</li>
+                    <li><input type="radio" name "q4" value="c" />Cascading Style Sheets</li>
+                    <li><input type="radio" name "q4" value="d" />Computer Style Sheets</li>
+                </ul>
+                <button id="submit">Submit</button>
+
+            </form>
+            <form class="questionForm" id="q5" data-question="5">
+                <h3>5. What does CSS stand for?</h3>
+                <ul>
+                    <li><input type="radio" name "q5" value="a" />Creative Style Sheets</li>
+                    <li><input type="radio" name "q5" value="b" />Colour style Sheets</li>
+                    <li><input type="radio" name "q5" value="c" />Cascading Style Sheets</li>
+                    <li><input type="radio" name "q5" value="d" />Computer Style Sheets</li>
+                </ul>
+                <button id="submit">Submit</button>
+
+            </form>
+            <form class="questionForm" id="q6" data-question="6">
+                <h3>6. What does CSS stand for?</h3>
+                <ul>
+                    <li><input type="radio" name "q6" value="a" />Creative Style Sheets</li>
+                    <li><input type="radio" name "q6" value="b" />Colour style Sheets</li>
+                    <li><input type="radio" name "q6" value="c" />Cascading Style Sheets</li>
+                    <li><input type="radio" name "q6" value="d" />Computer Style Sheets</li>
+                </ul>
+                <button id="submit">Submit</button>
+
+            </form>
+        </main>
+    </div>
 
 </body>
 
