--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
 <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
-    <script src="js/scripts.js"></script>
     <title>Quiz</title>
     <meta charset="utf-8">
     <!-- makes content equal to device width being viewed on(responsive) -->
@@ -87,9 +84,16 @@
                 <button id="submit">Submit</button>
 
             </form>
+            <div id ="results"></div>
+            <br>
         </main>
-    </div>
-
+        <footer>
+            <div class="pull-left">Total: 6 Questions</div>
+        </footer>
+    </div>    /*container*/
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
