Styling the body

--- a/index.html
+++ b/index.html
@@ -84,13 +84,14 @@
                 <button id="submit">Submit</button>
 
             </form>
-            <div id ="results"></div>
+            <div id="results"></div>
             <br>
         </main>
         <footer>
             <div class="pull-left">Total: 6 Questions</div>
         </footer>
-    </div>    /*container*/
+    </div>
+    <!-- container -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
