--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
     <title>Quiz</title>
     <meta charset="utf-8">
     <!-- makes content equal to device width being viewed on(responsive) -->
@@ -20,10 +23,10 @@
             <form class="questionForm" id="q1" data-question="1">
                 <h3>1. What does CSS stand for?</h3>
                 <ul>
-                    <li><input type="radio" name "q1" value="a" />Creative Style Sheets</li>
-                    <li><input type="radio" name "q1" value="b" />Colour style Sheets</li>
-                    <li><input type="radio" name "q1" value="c" />Cascading Style Sheets</li>
-                    <li><input type="radio" name "q1" value="d" />Computer Style Sheets</li>
+                    <li><input type="radio" name ="q1" value="a" />Creative Style Sheets</li>
+                    <li><input type="radio" name ="q1" value="b" />Colour style Sheets</li>
+                    <li><input type="radio" name ="q1" value="c" />Cascading Style Sheets</li>
+                    <li><input type="radio" name ="q1" value="d" />Computer Style Sheets</li>
                 </ul>
                 <button id="submit">Submit</button>
 
@@ -31,10 +34,10 @@
             <form class="questionForm" id="q2" data-question="2">
                 <h3>2.Which of the following type of variable is visible everywhere in your JavaScript code?</h3>
                 <ul>
-                    <li><input type="radio" name "q2" value="a" />Global variable</li>
-                    <li><input type="radio" name "q2" value="b" />Local variable</li>
-                    <li><input type="radio" name "q2" value="c" />Both of the above</li>
-                    <li><input type="radio" name "q2" value="d" />None of the above</li>
+                    <li><input type="radio" name ="q2" value="a" />Global variable</li>
+                    <li><input type="radio" name ="q2" value="b" />Local variable</li>
+                    <li><input type="radio" name ="q2" value="c" />Both of the above</li>
+                    <li><input type="radio" name ="q2" value="d" />None of the above</li>
                 </ul>
                 <button id="submit">Submit</button>
 
@@ -43,43 +46,46 @@
             <form class="questionForm" id="q3" data-question="3">
                 <h3>3.Which built-in method removes the last element from an array and returns that element? </h3>
                 <ul>
-                    <li><input type="radio" name "q3" value="a" />Last ()</li>
-                    <li><input type="radio" name "q3" value="b" />Get ()</li>
-                    <li><input type="radio" name "q3" value="c" />None of the above</li>
-                    <li><input type="radio" name "q3" value="d" />Pop ()</li>
+                    <li><input type="radio" name ="q3" value="a" />Last ()</li>
+                    <li><input type="radio" name ="q3" value="b" />Get ()</li>
+                    <li><input type="radio" name ="q3" value="c" />None of the above</li>
+                    <li><input type="radio" name ="q3" value="d" />Pop ()</li>
                 </ul>
                 <button id="submit">Submit</button>
 
             </form>
             <form class="questionForm" id="q4" data-question="4">
-                <h3>4.Which of the following function of String object combines the text of two strings and returns a new string? </h3>
+                <h3>4.Which of the following function of String object combines the text of two strings and returns a
+                    new string? </h3>
                 <ul>
-                    <li><input type="radio" name "q4" value="a" />Add ()</li>
-                    <li><input type="radio" name "q4" value="b" />Concat ()</li>
-                    <li><input type="radio" name "q4" value="c" />Merge ()</li>
-                    <li><input type="radio" name "q4" value="d" />Appen ()</li>
+                    <li><input type="radio" name ="q4" value="a" />Add ()</li>
+                    <li><input type="radio" name ="q4" value="b" />Concat ()</li>
+                    <li><input type="radio" name ="q4" value="c" />Merge ()</li>
+                    <li><input type="radio" name ="q4" value="d" />Appen ()</li>
                 </ul>
                 <button id="submit">Submit</button>
 
             </form>
             <form class="questionForm" id="q5" data-question="5">
-                <h3>5. Which of the following function of String object returns a string representing the specified object?</h3>
+                <h3>5. Which of the following function of String object returns a string representing the specified
+                    object?</h3>
                 <ul>
-                    <li><input type="radio" name "q5" value="a" />tostring</li>
-                    <li><input type="radio" name "q5" value="b" />toUpperCase</li>
-                    <li><input type="radio" name "q5" value="c" />substring</li>
-                    <li><input type="radio" name "q5" value="d" />toLocaleUpperCase</li>
+                    <li><input type="radio" name ="q5" value="a" />tostring</li>
+                    <li><input type="radio" name ="q5" value="b" />toUpperCase</li>
+                    <li><input type="radio" name ="q5" value="c" />substring</li>
+                    <li><input type="radio" name ="q5" value="d" />toLocaleUpperCase</li>
                 </ul>
                 <button id="submit">Submit</button>
 
             </form>
             <form class="questionForm" id="q6" data-question="6">
-                <h3>6. Which of the following function of String object splits a String object into an array of strings by separating the string into substrings?</h3>
+                <h3>6. Which of the following function of String object splits a String object into an array of strings
+                    by separating the string into substrings?</h3>
                 <ul>
-                    <li><input type="radio" name "q6" value="a" />Search</li>
-                    <li><input type="radio" name "q6" value="b" />Replace</li>
-                    <li><input type="radio" name "q6" value="c" />Slice</li>
-                    <li><input type="radio" name "q6" value="d" />Split</li>
+                    <li><input type="radio" name ="q6" value="a" />Search</li>
+                    <li><input type="radio" name ="q6" value="b" />Replace</li>
+                    <li><input type="radio" name ="q6" value="c" />Slice</li>
+                    <li><input type="radio" name ="q6" value="d" />Split</li>
                 </ul>
                 <button id="submit">Submit</button>
 
@@ -92,9 +98,7 @@
         </footer>
     </div>
     <!-- container -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
-    <script src="js/scripts.js"></script>
+
 </body>
 
 </html>
