--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 <body>
     <div class="container">
         <header>
-            <div class="pull-left">Quiz</div>
-            <div class="pull-right">Quiz</div>
+            <div class="pull-left">Quiz-Board</div>
+            <div class="pull-right">Javascript-Quiz</div>
         </header>
         <main>
             <form class="questionForm" id="q1" data-question="1">
                 <h3>1. What does CSS stand for?</h3>
                 <ul>
-                    <li><input type="radio" name ="q1" value="a" />Creative Style Sheets</li>
-                    <li><input type="radio" name ="q1" value="b" />Colour style Sheets</li>
-                    <li><input type="radio" name ="q1" value="c" />Cascading Style Sheets</li>
-                    <li><input type="radio" name ="q1" value="d" />Computer Style Sheets</li>
+                    <li><input type="radio" name="q1" value="a" />Creative Style Sheets</li>
+                    <li><input type="radio" name="q1" value="b" />Colour style Sheets</li>
+                    <li><input type="radio" name="q1" value="c" />Cascading Style Sheets</li>
+                    <li><input type="radio" name="q1" value="d" />Computer Style Sheets</li>
                 </ul>
                 <button id="submit">Submit</button>
 
@@ -34,22 +34,21 @@
             <form class="questionForm" id="q2" data-question="2">
                 <h3>2.Which of the following type of variable is visible everywhere in your JavaScript code?</h3>
                 <ul>
-                    <li><input type="radio" name ="q2" value="a" />Global variable</li>
-                    <li><input type="radio" name ="q2" value="b" />Local variable</li>
-                    <li><input type="radio" name ="q2" value="c" />Both of the above</li>
-                    <li><input type="radio" name ="q2" value="d" />None of the above</li>
+                    <li><input type="radio" name="q2" value="a" />Global variable</li>
+                    <li><input type="radio" name="q2" value="b" />Local variable</li>
+                    <li><input type="radio" name="q2" value="c" />Both of the above</li>
+                    <li><input type="radio" name="q2" value="d" />None of the above</li>
                 </ul>
                 <button id="submit">Submit</button>
 
             </form>
-
             <form class="questionForm" id="q3" data-question="3">
                 <h3>3.Which built-in method removes the last element from an array and returns that element? </h3>
                 <ul>
-                    <li><input type="radio" name ="q3" value="a" />Last ()</li>
-                    <li><input type="radio" name ="q3" value="b" />Get ()</li>
-                    <li><input type="radio" name ="q3" value="c" />None of the above</li>
-                    <li><input type="radio" name ="q3" value="d" />Pop ()</li>
+                    <li><input type="radio" name="q3" value="a" />Last ()</li>
+                    <li><input type="radio" name="q3" value="b" />Get ()</li>
+                    <li><input type="radio" name="q3" value="c" />None of the above</li>
+                    <li><input type="radio" name="q3" value="d" />Pop ()</li>
                 </ul>
                 <button id="submit">Submit</button>
 
@@ -58,10 +57,10 @@
                 <h3>4.Which of the following function of String object combines the text of two strings and returns a
                     new string? </h3>
                 <ul>
-                    <li><input type="radio" name ="q4" value="a" />Add ()</li>
-                    <li><input type="radio" name ="q4" value="b" />Concat ()</li>
-                    <li><input type="radio" name ="q4" value="c" />Merge ()</li>
-                    <li><input type="radio" name ="q4" value="d" />Appen ()</li>
+                    <li><input type="radio" name="q4" value="a" />Add ()</li>
+                    <li><input type="radio" name="q4" value="b" />Concat ()</li>
+                    <li><input type="radio" name="q4" value="c" />Merge ()</li>
+                    <li><input type="radio" name="q4" value="d" />Appen ()</li>
                 </ul>
                 <button id="submit">Submit</button>
 
@@ -70,10 +69,10 @@
                 <h3>5. Which of the following function of String object returns a string representing the specified
                     object?</h3>
                 <ul>
-                    <li><input type="radio" name ="q5" value="a" />tostring</li>
-                    <li><input type="radio" name ="q5" value="b" />toUpperCase</li>
-                    <li><input type="radio" name ="q5" value="c" />substring</li>
-                    <li><input type="radio" name ="q5" value="d" />toLocaleUpperCase</li>
+                    <li><input type="radio" name="q5" value="a" />tostring</li>
+                    <li><input type="radio" name="q5" value="b" />toUpperCase</li>
+                    <li><input type="radio" name="q5" value="c" />substring</li>
+                    <li><input type="radio" name="q5" value="d" />toLocaleUpperCase</li>
                 </ul>
                 <button id="submit">Submit</button>
 
@@ -82,10 +81,10 @@
                 <h3>6. Which of the following function of String object splits a String object into an array of strings
                     by separating the string into substrings?</h3>
                 <ul>
-                    <li><input type="radio" name ="q6" value="a" />Search</li>
-                    <li><input type="radio" name ="q6" value="b" />Replace</li>
-                    <li><input type="radio" name ="q6" value="c" />Slice</li>
-                    <li><input type="radio" name ="q6" value="d" />Split</li>
+                    <li><input type="radio" name="q6" value="a" />Search</li>
+                    <li><input type="radio" name="q6" value="b" />Replace</li>
+                    <li><input type="radio" name="q6" value="c" />Slice</li>
+                    <li><input type="radio" name="q6" value="d" />Split</li>
                 </ul>
                 <button id="submit">Submit</button>
 
